--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,195 +8,207 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
-        <RelativeLayout
+    <RelativeLayout
+            android:id="@+id/login_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#F6F6F6">
+
+        <FrameLayout
+                android:id="@+id/fm1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#F6F6F6">
+                android:layout_height="180dp"
+                android:background="@drawable/background_circle">
 
-            <FrameLayout
-                    android:id="@+id/fm1"
+            <ImageView
+                    android:id="@+id/travl"
+                    android:layout_width="281dp"
+                    android:layout_height="82dp"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_marginBottom="60dp"
+                    android:background="@drawable/logo"
+                    android:contentDescription="TODO" android:textColor="#000000"
+                    android:textSize="50sp"
+                    android:textStyle="bold"/>
+
+        </FrameLayout>
+
+        <FrameLayout
+                android:id="@+id/fm2"
+                android:layout_width="50dp"
+                android:layout_height="100dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/background_circle1">
+
+        </FrameLayout>
+
+        <FrameLayout
+                android:id="@+id/fm3"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/background_circle2">
+
+        </FrameLayout>
+
+        <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true">
+
+            <EditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:background="@drawable/background_circle">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/email"
+                    android:gravity="center"
+                    android:background="@drawable/background_gradient2"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="50dp"
+                    android:inputType="textEmailAddress"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:textSize="15sp"
+                    android:textColorHint="@color/colorDark"
+                    android:textColor="@color/colorDark"
+                    />
 
-                <ImageView
-                        android:id="@+id/travl"
-                        android:layout_width="281dp"
-                        android:layout_height="82dp"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="60dp"
-                        android:background="@drawable/logo"
-                        android:contentDescription="TODO" android:textColor="#000000"
-                        android:textSize="50sp"
-                        android:textStyle="bold"/>
+            <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/password"
+                    android:layout_marginBottom="10dp"
+                    android:layout_below="@+id/email"
+                    android:textCursorDrawable="@drawable/sky_blue_cursor_color"
+                    android:inputType="textPassword"
+                    android:gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:textSize="15sp"
+                    android:background="@drawable/background_gradient2"
+                    android:textColorHint="@color/colorDark"
+                    android:textColor="@color/colorDark"
+                    />
 
-            </FrameLayout>
 
-            <FrameLayout
-                    android:id="@+id/fm2"
-                    android:layout_width="50dp"
-                    android:layout_height="100dp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:background="@drawable/background_circle1">
 
-            </FrameLayout>
+            <Button
+                    android:id="@+id/assistant_apply"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:layout_below="@id/password"
+                    android:textCursorDrawable="@drawable/sky_blue_cursor_color"
+                    android:textColor="#FFFFFF"
+                    android:textSize="15sp"
+                    android:background="@color/colorPrimary"
+                    android:onClick="onLoginButtonClick"
+                    />
 
-            <FrameLayout
-                    android:id="@+id/fm3"
-                    android:layout_width="120dp"
-                    android:layout_height="100dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@drawable/background_circle2">
-
-            </FrameLayout>
-
-            <RelativeLayout
+            <TextView
+                    android:id="@+id/new_account"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/no_account"
+                    android:layout_below="@id/assistant_apply"
                     android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true">
+                    android:layout_marginTop="30dp"
+                    android:textColor="@color/colorDark"
+                    android:onClick="toRegister"
+                    />
 
-                <EditText
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/email"
-                        android:gravity="center"
-                        android:background="@drawable/background_gradient2"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="20dp"
-                        android:textCursorDrawable="@drawable/cursor_color"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="50dp"
-                        android:inputType="textEmailAddress"
-                        android:paddingTop="15dp"
-                        android:paddingBottom="15dp"
-                        android:textSize="15sp"
-                        android:textColorHint="@color/colorDark"
-                        android:textColor="@color/colorDark"
-                      />
-
-                <EditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/password"
-                        android:layout_marginBottom="10dp"
-                        android:layout_below="@+id/email"
-                        android:textCursorDrawable="@drawable/sky_blue_cursor_color"
-                        android:inputType="textPassword"
-                        android:gravity="center"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:paddingTop="15dp"
-                        android:paddingBottom="15dp"
-                        android:textSize="15sp"
-                        android:background="@drawable/background_gradient2"
-                        android:textColorHint="@color/colorDark"
-                        android:textColor="@color/colorDark"
-                />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/reset_password"
+                    android:layout_below="@id/new_account"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="15dp"
+                    android:textColor="@color/colorDark"
+                    android:onClick="passwordReset" />
+        </RelativeLayout>
 
 
-
-                <Button
-                        android:id="@+id/assistant_apply"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/login"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:layout_below="@id/password"
-                        android:textCursorDrawable="@drawable/sky_blue_cursor_color"
-                        android:textColor="#FFFFFF"
-                        android:textSize="15sp"
-                        android:background="@color/colorPrimary"
-                        android:onClick="onLoginButtonClick"
-                />
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/no_account"
-                        android:layout_below="@id/assistant_apply"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="30dp"
-                        android:textColor="@color/colorDark"
-                        android:onClick="toRegister"
-                />
-            </RelativeLayout>
-
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:orientation="vertical">
 
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:orientation="vertical">
+                    android:gravity="center"
+                    android:layout_marginBottom="13.7dp"
+                    android:orientation="horizontal">
 
-                <LinearLayout
-                        android:layout_width="match_parent"
+
+                <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_marginBottom="13.7dp"
-                        android:orientation="horizontal">
-
-
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="13.3sp"
-                            android:textColor="#aeaeae"
-                            android:gravity="center_horizontal"
-                            android:text="@string/or"
-                    />
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_marginBottom="35dp"
-                        android:orientation="horizontal">
-
-                    <ImageView
-                            android:layout_width="26.7dp"
-                            android:layout_height="26.7dp"
-                            android:src="@drawable/fb"
-                            android:contentDescription="facebook"/>
-
-                    <ImageView
-                            android:layout_width="26.7dp"
-                            android:layout_height="26.7dp"
-                            android:layout_marginRight="20dp"
-                            android:layout_marginLeft="20dp"
-                            android:src="@drawable/instagram"
-                            android:contentDescription="instagram"/>
-
-                    <ImageView
-                            android:layout_width="26.7dp"
-                            android:layout_height="26.7dp"
-                            android:layout_marginRight="20dp"
-                            android:src="@drawable/twitter"
-                            android:contentDescription="twitter"/>
-
-                    <ImageView
-                            android:layout_width="26.7dp"
-                            android:layout_height="26.7dp"
-                            android:src="@drawable/linkedin"
-                            android:contentDescription="linkedIn"/>
-
-                </LinearLayout>
-
+                        android:textSize="13.3sp"
+                        android:textColor="#aeaeae"
+                        android:gravity="center_horizontal"
+                        android:text="@string/or"
+                        />
 
 
             </LinearLayout>
 
-        </RelativeLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginBottom="35dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:layout_width="26.7dp"
+                        android:layout_height="26.7dp"
+                        android:src="@drawable/fb"
+                        android:contentDescription="facebook"/>
+
+                <ImageView
+                        android:layout_width="26.7dp"
+                        android:layout_height="26.7dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:src="@drawable/instagram"
+                        android:contentDescription="instagram"/>
+
+                <ImageView
+                        android:layout_width="26.7dp"
+                        android:layout_height="26.7dp"
+                        android:layout_marginRight="20dp"
+                        android:src="@drawable/twitter"
+                        android:contentDescription="twitter"/>
+
+                <ImageView
+                        android:layout_width="26.7dp"
+                        android:layout_height="26.7dp"
+                        android:src="@drawable/linkedin"
+                        android:contentDescription="linkedIn"/>
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <ProgressBar
             android:layout_width="wrap_content"
