--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/root_layout"
-            tools:context="com.client.traveller.ui.auth.LoginActivity"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.auth.LoginFragment">
 
     <RelativeLayout
             android:id="@+id/login_container"
@@ -101,7 +98,7 @@
 
 
             <Button
-                    android:id="@+id/assistant_apply"
+                    android:id="@+id/login_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/login"
@@ -115,7 +112,6 @@
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     android:background="@color/colorPrimary"
-                    android:onClick="onLoginButtonClick"
                     />
 
             <TextView
@@ -123,22 +119,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/no_account"
-                    android:layout_below="@id/assistant_apply"
+                    android:layout_below="@id/login_button"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="30dp"
                     android:textColor="@color/colorDark"
-                    android:onClick="toRegister"
                     />
 
             <TextView
+                    android:id="@+id/password_reset_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/reset_password"
                     android:layout_below="@id/new_account"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="15dp"
-                    android:textColor="@color/colorDark"
-                    android:onClick="passwordReset" />
+                    android:textColor="@color/colorDark" />
         </RelativeLayout>
 
 
@@ -210,13 +205,6 @@
 
     </RelativeLayout>
 
-    <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            android:id="@+id/progress_bar"
-            android:layout_centerInParent="true"
-            />
+    <include layout="@layout/progress_bar" />
 
-    </RelativeLayout>
-
+</RelativeLayout>
