--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -6,56 +6,64 @@
         android:background="#F6F6F6"
         tools:context=".ui.auth.PasswordResetFragment">
 
-    <EditText
-            android:id="@+id/email_password_reset"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/email"
-            android:gravity="center"
-            android:background="@drawable/background_gradient2"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:textCursorDrawable="@drawable/cursor_color"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="50dp"
-            android:inputType="textEmailAddress"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:textSize="15sp"
-            android:textColorHint="@color/colorDark"
-            android:textColor="@color/colorDark"
-            tools:ignore="TextFields" />
+   <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+       <EditText
+               android:id="@+id/email_password_reset"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:hint="@string/email"
+               android:gravity="center"
+               android:background="@drawable/background_gradient2"
+               android:layout_marginBottom="10dp"
+               android:layout_marginLeft="20dp"
+               android:textCursorDrawable="@drawable/cursor_color"
+               android:layout_marginRight="20dp"
+               android:layout_marginTop="50dp"
+               android:inputType="textEmailAddress"
+               android:paddingTop="15dp"
+               android:paddingBottom="15dp"
+               android:textSize="15sp"
+               android:textColorHint="@color/colorDark"
+               android:textColor="@color/colorDark"
+               tools:ignore="TextFields" />
 
-    <Button
-            android:id="@+id/password_reset_send"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/password_reset_button"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:layout_below="@id/email_password_reset"
-            android:textCursorDrawable="@drawable/sky_blue_cursor_color"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            android:background="@color/colorPrimary"
-            />
-    <Button
-            android:id="@+id/password_reset_cancel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/password_reset_cancel_button"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:layout_below="@id/password_reset_send"
-            android:textCursorDrawable="@drawable/sky_blue_cursor_color"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            android:background="@color/colorPrimary"
-            />
+       <Button
+               android:id="@+id/password_reset_send"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:text="@string/password_reset_button"
+               android:layout_marginTop="10dp"
+               android:layout_marginLeft="20dp"
+               android:layout_marginRight="20dp"
+               android:paddingTop="5dp"
+               android:paddingBottom="5dp"
+               android:layout_below="@id/email_password_reset"
+               android:textCursorDrawable="@drawable/sky_blue_cursor_color"
+               android:textColor="#FFFFFF"
+               android:textSize="15sp"
+               android:background="@color/colorPrimary"
+               />
+       <Button
+               android:id="@+id/password_reset_cancel"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:text="@string/password_reset_cancel_button"
+               android:layout_marginTop="10dp"
+               android:layout_marginLeft="20dp"
+               android:layout_marginRight="20dp"
+               android:paddingTop="5dp"
+               android:paddingBottom="5dp"
+               android:layout_below="@id/password_reset_send"
+               android:textCursorDrawable="@drawable/sky_blue_cursor_color"
+               android:textColor="#FFFFFF"
+               android:textSize="15sp"
+               android:background="@color/colorPrimary"
+               />
+   </RelativeLayout>
+
+
+    <include layout="@layout/progress_bar" />
+
 </RelativeLayout>
