--- a/app/src/main/res/drawable/my_location_button_background.xml
+++ b/app/src/main/res/drawable/my_location_button_background.xml
@@ -6,15 +6,15 @@
 
             >
             <corners android:radius="2dp" />
-            <solid android:color="@color/colorWhiteDarkMaterial" />
+            <solid android:color="@color/colorWhiteLightMaterial" />
         </shape>
     </item>
     <item
-        android:drawable="@drawable/ic_my_location"
-        android:bottom="3dp"
-        android:top="3dp"
-        android:right="3dp"
-        android:left="3dp"
+        android:drawable="@drawable/my_location_button"
+        android:bottom="-2dp"
+        android:top="-2dp"
+        android:right="-2dp"
+        android:left="-2dp"
         >
     </item>
 </layer-list>
