--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,40 +10,56 @@
         tools:openDrawer="start"
 >
 
-    <fragment
-        android:id="@+id/nav_host_fragment_home"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        app:navGraph="@navigation/nav_graph_home" />
-
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
+        android:layout_height="match_parent"
+
         >
 
-        <com.paulrybitskyi.persistentsearchview.PersistentSearchView
-            android:id="@+id/persistentSearchView"
+        <fragment
+            android:id="@+id/nav_host_fragment_home"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="4dp"
-            android:paddingLeft="4dp"
-            android:paddingStart="4dp"
-            android:paddingRight="4dp"
-            android:paddingEnd="4dp"
-            app:leftButtonDrawable="@drawable/ic_menu"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="2dp"
-            app:queryInputHint="@string/search_hint"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
 
-            />
-    </FrameLayout>
+            app:navGraph="@navigation/nav_graph_home" />
+
+
+            <com.paulrybitskyi.persistentsearchview.PersistentSearchView
+                android:id="@+id/persistentSearchView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="4dp"
+                android:paddingLeft="4dp"
+                android:paddingStart="4dp"
+                android:paddingRight="4dp"
+                android:paddingEnd="4dp"
+                app:leftButtonDrawable="@drawable/ic_menu"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="2dp"
+                app:queryInputHint="@string/search_hint"
+                app:layout_constraintTop_toTopOf="parent"
+                android:fitsSystemWindows="true"
+
+                />
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/bottom_navigation"
+                android:layout_gravity="bottom"
+                android:background="@color/colorWhiteLightMaterial"
+                app:itemIconTint="@color/colorPrimary"
+                app:itemTextColor="@color/colorPrimary"
+                app:menu="@menu/bottom_navigation_menu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!--Drawer-->
     <com.google.android.material.navigation.NavigationView
