--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhiteLightMaterial"
-    tools:context=".ui.chat.messeagesList.ChatListFragment">
+    tools:context=".ui.chat.chatList.ChatListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
