--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-
             app:navGraph="@navigation/nav_graph_home" />
 
 
@@ -57,6 +56,7 @@
                 app:itemTextColor="@color/colorPrimary"
                 app:menu="@menu/bottom_navigation_menu"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:fitsSystemWindows="true"
                 />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
